Updated POM file, removing redundant dependencies